Development Portal (2020-02-09 shi)
==============================
Fix sector icons for freetext search dropdown
Update new SAVi elements css and layout
Display first narratives
Update css for links and activity dates
Display humanitarian for transactions
Clean up new SAVi css


Development Portal (2020-02-08 shi)
==============================
Add crs-add
Display crs-add elements
Update css for new elements
Removed text bracket from crs channel-code
Fix whitespace crs loan status
Display all elements under transaction
Display withdrawn status
Update ref link for participating-org
Display crs for participating-org


Development Portal (2020-02-07 shi)
==============================
Update FAQ about narratives
Add wrappers for remaining elements
Display country-budget-items
Display other identifier
Display description for sector vocab
Update css for new SAVi
Display sector vocab url
Update sector layout and headers
Add chunks for empty description and percantage
Display recipient region vocab and description
Display capital spend
Update country-budget-items
Display conditions and legacy data


Development Portal (2020-02-06 shi)
==============================
Update contact-info
Update comments
Add tag to new SAVi
Update css
Add related-activity
Add activity-status
Add json chunk for activity-status-back
Update json chunk with different colours


Development Portal (2020-02-05 shi)
==============================
Add contact-info and policy-marker new SAVi


Development Portal (2020-02-04 shi)
==============================
Add planned-disbursement new SAVi
Update css for transaction and budget tables
Add recipient-region new SAVi
Update debug page for new SAVi with more examples


Development Portal (2020-02-01 shi)
==============================
Update css for new SAVi dates


Development Portal (2020-01-31 shi)
==============================
Update text for projects ending soon
Update css for org file and projects ending soon list