@@ -58,9 +58,10 @@ span.block		{display:block;}
 .wrap_default .text:first-of-type	{padding-right:20px;}
 .wrap_default .text	span	{font-size:16px; color:#fff; padding-left:10px;}
 .wrap_location .header_section,
-.wrap_budget .header_section{margin-top:0;}
-.wrap_document	{margin:30px 0;}
-
+.wrap_budget .header_section	{margin-top:0;}
+.wrap_document					{margin:30px 0;}
+.wrap_budget_not_provided		{padding-bottom:20px; font-size:14px;}
+.wrap_budget_not_provided span	{text-transform:lowercase; font-weight:bold;}
 .reporting_org span	{font-size:12px; margin-left:5px; vertical-align:middle;}
 .reporting_org .narrative:nth-of-type(2)	{font-style:italic;}
 
@@ -198,13 +199,12 @@ td.description div:last-of-type		{border:0;}
 table.budget	{border-collapse:collapse; table-layout:fixed; text-align:left; width:880px;}
 table.budget th	{padding-bottom:10px; border-bottom:1px solid #aaa; margin-bottom:15px; font-size:14px; font-weight:normal; color:#CCC; line-height:1.35em; background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA8AAAAPBAMAAADJ+Ih5AAAAIVBMVEUAAAD////////////////////////////////////////PIev5AAAAC3RSTlMArxdHEAqfnTkpJkV64fYAAAAtSURBVAjXY8AKOGAMQwMIzSUoCWG4C4o5gBlBSkoBcPVwEbgauC6EOQiTMQEAKKIEY4aIsg8AAAAASUVORK5CYII=) no-repeat right 5px center;}
 .org table.budget th.status,
-table.budget th.value	{background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA8AAAAPBAMAAADJ+Ih5AAAAIVBMVEUAAAD////////////////////////////////////////PIev5AAAAC3RSTlMArxdHEAqfnTkpJkV64fYAAAAtSURBVAjXY8AKOGAMQwMIzSUoCWG4C4o5gBlBSkoBcPVwEbgauC6EOQiTMQEAKKIEY4aIsg8AAAAASUVORK5CYII=) no-repeat right -5px center, 1c252fe8;}
+table.budget th.value	{background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA8AAAAPBAMAAADJ+Ih5AAAAIVBMVEUAAAD////////////////////////////////////////PIev5AAAAC3RSTlMArxdHEAqfnTkpJkV64fYAAAAtSURBVAjXY8AKOGAMQwMIzSUoCWG4C4o5gBlBSkoBcPVwEbgauC6EOQiTMQEAKKIEY4aIsg8AAAAASUVORK5CYII=) no-repeat right -5px center, #1c252fe8;}
 
 table.budget th:hover	{cursor:pointer;}
 table.budget td			{font-size:14px; color:#FFF; line-height:1.35em; vertical-align:top; border-bottom:1px solid #333642; padding:10px 0;}
 table.budget td.value	{font-size:16px; padding-right:20px; text-align:right;}
 .org table.budget td.value			{font-size:14px;}
-
 
 table.budget tr:nth-of-type(1) td	{padding-top:15px;}
 table.budget th			{position:sticky; top:30px; z-index:1; background-color:#1c252fe8; padding:10px 0;}
@@ -310,20 +310,6 @@ table.budget.location td.loc_reach,
 table.budget.location th.loc_exact,
 table.budget.location td.loc_exact			{width:110px; padding-right:0px;}
 
-table.budget.act th,
-table.budget.act td,
-table.budget.act_trans th.date,
-table.budget.act_trans td.date				{width:110px; padding-right:0px;}
-
-table.budget.act th:nth-of-type(2),
-table.budget.act td:nth-of-type(2),
-table.budget.act th:nth-of-type(3)
-table.budget.act td:nth-of-type(3)			{width:120px; padding-right:0px;}
-table.budget.act th:nth-of-type(4),
-table.budget.act td:nth-of-type(4)			{width:200px; padding-right:0px;}
-table.budget.act th:nth-of-type(5),
-table.budget.act td:nth-of-type(5)			{width:330px; padding-right:20px;}
-
 /*	IATI ACTIVITY TRANSACTION TABLES	*/
 table.budget.act_trans th.description,
 table.budget.act_trans td.description		{width:240px; padding-right:30px;}
@@ -333,20 +319,16 @@ table.budget.act_trans th.receiver,
 table.budget.act_trans td.receiver			{width:170px; padding-right:0px;}
 table.budget.act_trans th.value,
 table.budget.act_trans td.value				{width:160px; padding-right:20px;}
+table.budget.act_trans th.date,
+table.budget.act_trans td.date				{width:110px; padding-right:0px;}
 
-table.budget.result th,
-table.budget.result td						{width:100px; padding-right:0px;}
-table.budget.result th:nth-of-type(2),
-table.budget.result td:nth-of-type(2)		{width:280px; padding-right:20px;}
-table.budget.result th:nth-of-type(3),
-table.budget.result td:nth-of-type(3)		{width:500px; padding-right:0px;}
-.result_title	{font-size:16px; padding-bottom:5px;}
-.result_desc	{font-size:14px; color:#ccc;}
-.result_in_date,
-.result_in		{display:inline-block; vertical-align:top; width:70%;}
-.result_in_date	{width:30%;}
-.result_in_date div			{text-align:right;}
-.result_in_date div span	{font-size:12px; color:#ccc; width:50px; text-align:left;}
+/*	IATI ACTIVITY RESULT TABLE	*/
+.wrap_result th.result_indi,
+.wrap_result td.result_indi					{width:350px; padding-right:40px;}
+.wrap_result td.result_base,
+.wrap_result td.result_target,
+.wrap_result td.result_actual				{font-size:16px;}
+.wrap_result td.result_period				{font-size:12px;}
 
 /*	IATI ACTIVITY POLICY MARKER TABLE	*/
 .wrap_policy_marker table.budget th.policy_code,
