@@ -6,6 +6,8 @@ Display first narratives
 Update css for links and activity dates
 Display humanitarian for transactions
 Clean up new SAVi css
+Display @budget-not-provided
+Update result section
 
 
 Development Portal (2020-02-08 shi)
